# Legal-AI-For-Bankruptcy-Cases

./: .env  LICENSE  README.md  env  pyproject.toml
data/: title_11_bankruptcy.csv
notebooks/: ollama_test.ipynb  pinecone_utils.ipynb  rapid_law.ipynb  upload_to_pinecone.ipynb
rapid_law/components/: cohere_utils.py  format_to_xml.py  gemini_utils.py  ollama_utils.py  pinecone_utils.py
rapid_law/components/graph_components/: nodes.py  state.py
ui/: app.py
